# genome_regions

./: .gitignore  Makefile  README.md  pyproject.toml
genome_regions/: main.py  models.py  utils.py
