[tool.poetry]
name = "genome-regions"
version = "0.1.0"
description = ""
authors = ["Philippa Muston <pm22@sanger.ac.uk>"]
readme = "README.md"
packages = [{include = "genome_regions"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
